<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/border"
    android:backgroundTint="@color/material_dynamic_neutral100"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/BottomSheetPeekValue"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/tvFilterAndSearch"
        style="@style/CasualTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/filter_and_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFilterByDate"
        style="@style/CasualTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sort_by_date_edited"
        app:layout_constraintStart_toStartOf="@+id/tvFilterAndSearch"
        app:layout_constraintTop_toBottomOf="@id/tvFilterAndSearch" />

    <ImageButton
        android:id="@+id/ib_filterAsc"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginHorizontal="8dp"
        android:background="#0000"
        android:contentDescription="@string/filter_ascending"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_arrow_up"
        app:layout_constraintBottom_toBottomOf="@+id/tvFilterByDate"
        app:layout_constraintStart_toEndOf="@+id/tvFilterByDate"
        app:layout_constraintTop_toTopOf="@+id/tvFilterByDate" />

    <ImageButton
        android:id="@+id/ib_filterDesc"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginHorizontal="8dp"
        android:background="#0000"
        android:contentDescription="@string/filter_descending"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@+id/ib_filterAsc"
        app:layout_constraintStart_toEndOf="@+id/ib_filterAsc"
        app:layout_constraintTop_toTopOf="@+id/ib_filterAsc" />

    <EditText
        android:id="@+id/etFilterName"
        style="@style/CasualTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:autofillHints="Learn"
        android:hint="@string/habit_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/tvFilterByDate"
        app:layout_constraintTop_toBottomOf="@+id/tvFilterByDate" />


</androidx.constraintlayout.widget.ConstraintLayout>