<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerName"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            style="@style/CasualTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/habit_name"
            android:lines="1"
            android:maxLines="1"
            android:text="@{viewModel.}"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerDescription"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            style="@style/CasualTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/habit_description"
            android:maxLines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/CasualTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/choose_priority"
        app:layout_constraintBottom_toBottomOf="@+id/spPriority"
        app:layout_constraintEnd_toStartOf="@+id/spPriority"
        app:layout_constraintTop_toTopOf="@+id/spPriority" />

    <Spinner
        android:id="@+id/spPriority"
        style="@style/CasualTextStyle"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerDescription" />

    <HorizontalScrollView
        android:id="@+id/hsvRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spPriority">

        <RadioGroup
            android:id="@+id/rgHabitType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spPriority">

            <RadioButton
                android:id="@+id/rbGood"
                style="@style/CasualTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:text="@string/good_habit" />

            <RadioButton
                android:id="@+id/rbBad"
                style="@style/CasualTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:text="@string/bad_habit" />

        </RadioGroup>
    </HorizontalScrollView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerExecutionQuantity"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hsvRadioGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etExecutionQuantity"
            style="@style/CasualTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/quantity_of_habit_fulfillment"
            android:inputType="number"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerFrequency"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerExecutionQuantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFrequency"
            style="@style/CasualTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/times_per_week"
            android:inputType="number"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvColor"
        style="@style/CasualTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/svColor"
        app:layout_constraintStart_toStartOf="@id/svColor"
        tools:background="#FF00AA"
        tools:ignore="TextContrastCheck"
        tools:text="Current Color: HSV(320, 1, 1), RGB(255,0,170)" />

    <HorizontalScrollView
        android:id="@+id/svColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerFrequency"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_height="130dp" />

    <Button
        android:id="@+id/btnSubmit"
        style="@style/CasualTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svColor" />

</androidx.constraintlayout.widget.ConstraintLayout>

